2011-04-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_image.c (rescale_image): Don't attempt to scale
	to negative size.

2011-04-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/10_linux.in: Add rootflags=subvol=<name> if / is on a
	btrfs subvolume.
	* util/grub.d/20_linux_xen.in: Likewise.

2011-04-13  Colin Watson  <cjwatson@ubuntu.com>

	Rewrite /proc/self/mountinfo handling to cope with bind-mounts and
	move-mounts appearing out of order.  Fixes Ubuntu bug #738345.

	* grub-core/kern/emu/getroot.c (find_root_device_from_mountinfo):
	Build a list of relevant visible mounts using the mnt_id and
	parent_mnt_id fields, and then scan that list at the end.

2011-04-12  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (normal): New section.
	(normal_exit): New section.
	(Embedded configuration): Add reference to normal.
	(GRUB only offers a rescue shell): Likewise.
	* docs/grub-dev.texi (Error Handling): Fix typo.

2011-04-12  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Drop obsolete entry about probe-only btrfs support.

2011-04-12  Colin Watson  <cjwatson@ubuntu.com>

	* util/import_gcry.py: Fix typo.

2011-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* NEWS: Add btrfs support.

2011-04-11  Vladimir Serbinenko  <phcoder@gmail.com>
2011-04-11  Colin Watson  <cjwatson@ubuntu.com>

	BtrFS support. Written by me (Vladimir) with important bugfixes and
	even more important testing by Colin.

	* Makefile.util.def (libgrubmods.a): Add crc.c and gzio.c
	* grub-core/Makefile.core.def (btrfs): Add crc.c.
	* grub-core/fs/btrfs.c: Stub replaced with real implementation.
	* grub-core/io/gzio.c (grub_gzio): New fields mem_input_size,
	mem_input_off and mem_input. All users updated to accept in-RAM input.
	(gzio_seek): New function.
	(test_zlib_header): Likewise.
	(grub_gzio_read): Likewise.
	(grub_zlib_decompress): Likewise.
	* grub-core/kern/emu/getroot.c (grub_find_root_device_from_mountinfo):
	Accept partial and non-virtual mounts.